<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".checkin1">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/txt_iniciarsesion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_login"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:textColor="@color/greendark"
            android:textSize="14sp"
            android:fontFamily="@font/asap"
            />

        <TextView
            android:id="@+id/txt_anterior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/asap"
            android:onClick="anterior"
            android:text="@string/txt_Anterior"
            android:textColor="@color/greendark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:text="@string/txt_registrarse"
            android:textColor="@color/greendark"
            android:textSize="26sp"
            android:fontFamily="@font/quicksand_light"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:text="@string/txt_primerNombre"
            android:textColor="@color/greendark"
            android:textSize="14sp"
            android:fontFamily="@font/asap"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_primerNombre"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:fontFamily="@font/asap"
            android:hint="@string/hint_primerNombre"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:text="@string/txt_segundoNombre"
            android:textColor="@color/greendark"
            android:textSize="14sp"
            android:fontFamily="@font/asap"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_segundoNombre"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:fontFamily="@font/asap"
            android:hint="@string/hint_segundoNombre"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:text="@string/txt_primerApellido"
            android:textColor="@color/greendark"
            android:textSize="14sp"
            android:fontFamily="@font/asap"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_primerApellido"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:fontFamily="@font/asap"
            android:hint="@string/hint_primerApellido"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:text="@string/txt_segundoApellido"
            android:textColor="@color/greendark"
            android:textSize="14sp"
            android:fontFamily="@font/asap"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_segundoApellido"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:fontFamily="@font/asap"
            android:hint="@string/hint_segundoApellido"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/grey"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/boton_redondeado"
            android:elevation="30dp"
            android:fontFamily="@font/asap"
            android:onClick="siguiente"
            android:padding="10dp"
            android:text="@string/boton_siguiente"
            android:textSize="17sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>