<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="130dp"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/titulo_login"
            android:textColor="@color/greendark"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/asap"
            android:text="@string/subtitulo_login"
            android:textColor="#2E7D32"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/asap"
            android:text="@string/etiqueta_email"
            android:textColor="@color/greendark"
            android:textSize="14sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/input_email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/asap"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/grey"
            android:textStyle="bold"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/asap"
            android:text="@string/etiqueta_paswword"
            android:textColor="@color/greendark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ojo"
            android:drawableTint="@color/grey"
            android:ems="10"
            android:fontFamily="@font/asap"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/boton_redondeado"
            android:elevation="30dp"
            android:fontFamily="@font/asap"
            android:onClick="ingresar"
            android:padding="10dp"
            android:text="@string/boton_ingresar"
            android:textSize="17sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />
        <!-- se pone app:backgroundTint="@null" , para que reconozca el color de fondo ya que material ignora el background-->


        <TextView
            android:id="@+id/txt_olvidoContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/asap"
            android:gravity="center"
            android:text="@string/txt_olvidopassword"
            android:textColor="@color/greydark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/asap"
            android:gravity="center"
            android:text="@string/txt_registrarse"
            android:textColor="#2E7D32"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>