<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePassword">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand_light"
            android:gravity="center"
            android:text="@string/txt_ttituloContraseña"
            android:textColor="@color/greendark"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/asap"
            android:text="@string/txt_contraseña"
            android:textColor="@color/greendark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_passw"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/asap"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/asap"
            android:text="@string/txt_confiContraseña"
            android:textColor="@color/greendark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_confirPassw"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/asap"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox_termiYcond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/asap"
            android:text="@string/check_terminos"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/asap"
            android:text="@string/txt_terminos"
            android:textColor="#2E7D32"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/boton_redondeado"
            android:elevation="30dp"
            android:fontFamily="@font/asap"
            android:onClick="registrarse"
            android:padding="10dp"
            android:text="@string/boton_registrarse"
            android:textSize="17sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/txt_tienesCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/asap"
            android:gravity="center"
            android:text="@string/txt_tienesCuenta"
            android:textColor="#78909C"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_iniciarSesion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/asap"
            android:gravity="center"
            android:onClick="IniciarSesion"
            android:text="IniciarSesion"
            android:textColor="#2E7D32"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>