<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".checkin">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText,TextSizeCheck">


        <TextView
            android:id="@+id/txt_iniciarsesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/asap"
            android:gravity="end"
            android:text="@string/titulo_login"
            android:textColor="@color/greendark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/txt_registrarse"
            android:textColor="@color/greendark"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/asap"
            android:text="@string/txt_tipoUsuario"
            android:textColor="@color/greendark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_tpUsuario"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/asap"
            android:text="@string/txt_numDocum"
            android:textColor="@color/greendark"
            android:textSize="14sp"
            android:textStyle="bold" />
        />

        <EditText
            android:id="@+id/input_documento"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:fontFamily="@font/asap"
            android:hint="@string/hint_numDocum"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/grey"
            android:textStyle="bold" />


        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/boton_redondeado"
            android:elevation="30dp"
            android:fontFamily="@font/asap"
            android:onClick="siguiente"
            android:padding="10dp"
            android:text="@string/boton_siguiente"
            android:textSize="17sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>